Solve Day 19